--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@ https://templatemo.com/tm-586-scholar
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>Rightbook</h1>
-                    </a>
+  <img src="assets/images/Ritebook-Logo.png" alt="Rightbook Logo">
+</a>
+
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Serach Start ***** -->
                     <div class="search-input">
@@ -678,3 +679,4 @@ https://templatemo.com/tm-586-scholar
   </body>
 
 </html>
+
